tests/compile-fail/parser/complex-const.rs
const CONST: int = 3 + 2;  //! ERROR(1:22): expected `;`, found `+`

fn main() {}
